# ResumeAgent

./: .gitignore  README.md  config.example.toml  pyproject.toml
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/application-flow/: page.tsx
apps/web/src/app/portals/: page.tsx
apps/web/src/app/queue/: page.tsx
apps/web/src/components/: AppShell.tsx  PlaceholderPage.tsx
apps/web/src/lib/: navigation.ts
data/: sample_jobs.json
docs/: resume-agent-prd.md  ui-ux-guidelines.md
docs/issues/: 001-local-web-app-shell.md  002-backend-api-around-existing-cli-engine.md  003-dashboard-run-summary.md  004-portal-settings-and-scan-trigger.md  005-job-queue-review.md  006-job-detail-and-match-explanation.md  007-tailored-resume-review-and-qa.md  008-pdf-export-and-approval-workflow.md  009-application-flow-state-panel.md  010-tracker-ui-and-exports.md  011-hourly-watcher-and-notifications.md  012-gulftalent-browser-workflow-hardening.md  README.md
imports/: README.md
jobapply/: __init__.py  api.py  application_agent.py  cli.py  config.py  db.py  models.py  pdf_export.py  pipeline.py  resume.py  scoring.py  services.py  tracker.py
jobapply/portals/: __init__.py  base.py  browser_agent.py  configured.py  demo_json.py  feed.py  saved_search_import.py
resumes/: README.md
tests/: test_api.py  test_application_agent.py  test_cli_portals.py  test_dedupe_and_scoring.py  test_feed.py  test_pdf_export.py  test_pipeline.py  test_resume.py  test_saved_search_import.py  test_tracker.py
(+3 files in other folders)
