[project]
name = "resume-automation"
version = "0.1.0"
description = "Personal job portal scanner, resume tailor, and application tracker."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
jobapply = "jobapply.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
